--- a/certificate.html
+++ b/certificate.html
@@ -87,7 +87,7 @@
 
 <body>
     <div class="main">
-        <div class="head">Certificate of Appreciation Godwin</div>
+        <div class="head">Certificate of Appreciation Godwin VC</div>
 		<br><br>
         <div class="name" id="name_txt"></div>
         <div class="text">is thanked and appreciated for successfully completing the Online Course on “Drunken Drive Awareness Program”,<br> an initiative taken up by “Swift elearning Services” and “Youth Against Speed”</div>
