--- a/certificate.html
+++ b/certificate.html
@@ -45,6 +45,7 @@
         }
         
         .text {
+            max-width: 900px;
             font-family: Times New Roman;
             text-align: center;
             font-size: 20px;
@@ -87,7 +88,7 @@
 
 <body>
     <div class="main">
-        <div class="head">Certificate of Appreciation Godwin VC</div>
+        <div class="head">Certificate of Appreciation</div>
 		<br><br>
         <div class="name" id="name_txt"></div>
         <div class="text">is thanked and appreciated for successfully completing the Online Course on “Drunken Drive Awareness Program”,<br> an initiative taken up by “Swift elearning Services” and “Youth Against Speed”</div>
