--- a/certificate.html
+++ b/certificate.html
@@ -91,7 +91,7 @@
         <div class="head">Certificate of Appreciation</div>
 		<br><br>
         <div class="name" id="name_txt"></div>
-        <div class="text">is thanked and appreciated for successfully completing <br> the Online Course on “Drunken Drive Awareness Program”, an initiative taken up by “Swift elearning Services” and “Youth Against Speed”</div>
+        <div class="text">is thanked and appreciated for successfully completing <br> the Online Course on “Drunken Drive Awareness Program”, an initiative taken up by <br> “Swift elearning Services” and “Youth Against Speed”</div>
 		<br><br><br><br><br><br><br><br><br><br><br>
 		<div class="picow">Note: This certificate is computer generated and does not require any Seal/Signature in original.</div>
         <br>
